<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BlackJackActivity"
    android:background="@drawable/green_background">
    <ImageView
        android:id="@+id/blueback"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_gravity="end"
        android:adjustViewBounds="true"
        android:background="@drawable/selected_image_shadow"
        android:padding="2dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/balanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="#ffff00" />
            <TextView
                android:id="@+id/balanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff00" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="100dp"
                android:layout_weight="5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dealerHandScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text=""
                    android:textColor="#ffff00" />
                <LinearLayout
                    android:id="@+id/dealerHandLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="30dp"
                android:layout_weight="5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/playerHandScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text=""
                    android:textColor="#ffff00" />
                <LinearLayout
                    android:id="@+id/playerHandLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="bottom"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/betText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffff00"
                    android:text="@string/bet" />
                <TextView
                    android:id="@+id/betValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffff00" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_gameCommand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                style="?android:attr/buttonBarStyle">
                <Button
                    android:id="@+id/buttonHit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:text="@string/hit" />
                <Button
                    android:id="@+id/buttonStand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:text="@string/stand" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_deal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    style="?android:attr/buttonBarStyle">
                    <Button
                        android:id="@+id/buttonClear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="30dp"
                        android:text="@string/clear" />
                    <Button
                        android:id="@+id/buttonDeal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="30dp"
                        android:text="@string/deal" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="#42000000" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/bet5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/c5" />
                    <ImageView
                        android:id="@+id/bet25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/c25" />
                    <ImageView
                        android:id="@+id/bet50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/c50" />
                    <ImageView
                        android:id="@+id/bet100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/c100" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>